static/css/style.css
*{
    margin:0;
    padding:0;
    /* box-sizing: border-box; */
}

footer{
    width:100%;
}
footer .container{
    width: 100%;
    margin-top: 5%;
}
footer h1{
    text-transform: uppercase;
    font-family: Helvetica;
    color:darkgrey;
    font-size: 1.4rem;
    
}
/* .bg{
    background-color: rgba(0,0,0,.2);
}   */

  .container{
    text-align: center;
    
    padding: 30px; 
    margin-top: 10%;
    width: 80%;
    
}    
.text h1{
    color: floralwhite;
    text-transform: uppercase;
    font-weight:700;
}
.text p{
    color: ghostwhite;
    margin-top: 10%;
    font-weight:600;
    font-size: 1.6rem;
}
.text h5{
    color: ghostwhite;
    font-size: 1.1rem;
    margin-top: 10%;
    font-weight:600;
}
.text .btn{
    margin-top: 10%;
    text-transform: uppercase;
    font-family: Georgia, 'Times New Roman', Times, serif;
}
.text .btn:hover{
    background-color: black;
    color: #fff;
}

/* Services Page */
.container hr{
    background-color:rgba(254, 43, 43, 0.932);
    width: 240px;
    margin: 7px auto;
}
.spec hr{
    background-color:#fff;
    width: auto;
}
#strategy{
    background-color: rgb(5, 5, 52);
    background-size: cover;
}
#strategy h2{
    color: darkgray;
    font-size: 2.4rem;
    
}
#strategy p{
    padding:10px 97px 10px;
    
}
#icon-grid h2{
    color: darkgray;
    font-size: 2.2rem;
    
}
.spec h4{
    text-transform: uppercase;
    font-size: 1.6rem;
    font-weight: 700;
    /* font-family:  */
}

form{
    background-color:aliceblue;
    border-radius: 5px;
    padding: 57px;
}
.row h1{
    color: #fff;
}
#con{
    color: #fff;
    margin-top: 55px; 
    font-size: 1.4rem;
    font-weight: 700;
}
/* .container-serv{
    text-align: center;
    width: 80%;
    padding: 30px;
    margin-top: 17%;
} */
/* body{
    background-color: black;
} */
 /* main > .container {
    padding: 60px 15px 0;
  }  */


@media (max-width: 768px) {
    body{
        min-height: 30vh;
    }
}

